css/style.css
/* ... */
.btn-ghost:hover {
  box-shadow: none;
}

/* Tag */
.tag {
  font-size: var(--font-size-sm);
  width: fit-content;
  margin: 0 auto var(--space-lg);
  padding: var(--space-xs) var(--space-md);
  border-radius: var(--round-full);
  box-shadow: var(--shadow-inset), var(--shadow-outset);
}

/* Decorative Cards */
.art-card {
  display: flex;
  align-items: center;
  width: fit-content;
  min-width: 13rem;
  padding: var(--space-xs);
  border: 1px solid rgb(var(--color-neutral-white) / 0.1);
  border-radius: var(--round-md);
  background-image: linear-gradient(
    45deg,
    rgb(var(--color-neutral-white) / 0.1),
    transparent
  );
  gap: var(--space-md);
  backdrop-filter: blur(1rem);
}

.art-card-icon-box {
  flex-shrink: 0;
  width: 2.75rem;
  height: 2.75rem;
  padding: var(--space-xs);
  border: 1px solid rgb(var(--color-neutral-white) / 0.1);
  border-radius: var(--round-sm);
}

.art-card-text {
  font-size: var(--font-size-sm);
  line-height: var(--line-height-xl);
}

/* Lists */
.card-list {
  display: flex;
  flex-direction: column;
  gap: var(--space-xl);
}

.card-item {
  display: flex;
  gap: var(--space-md);
}

.card-list-icon {
  max-width: 1.5rem;
  max-height: 1.5rem;
}

.card-list-text {
  font-size: var(--font-size-lg);
}

/* Utilities */
.top-left {
  position: absolute;
  z-index: 1;
  top: 10%;
  left: 0;
}

.top-right {
  position: absolute;
  z-index: 1;
  top: 10%;
  right: 0;
}

.bottom-left {
  position: absolute;
  z-index: 1;
  bottom: 10%;
  left: 0;
}

.bottom-right {
  position: absolute;
  z-index: 1;
  right: 0;
  bottom: 10%;
}

.gradient-border {
  border: 1px solid transparent;
  background-image: var(--gradient-bg-mask), var(--gradient-primary);
  background-clip: padding-box, border-box;
  background-origin: border-box;
  box-shadow: var(--shadow-inset), var(--shadow-outset);
}

.bg-glow {
  background-image: var(--glow-pink), var(--glow-blue);
}

.nav-list {
  display: flex;
  gap: var(--space-lg);
}

.nav-link {
  display: inline-block;
  transition: all 0.2s ease;
}

.nav-link:hover {
  transform: translateY(-2px) scale(1.02);
  color: var(--color-neutral-white);
  filter: brightness(1.1);
}

.nav-link:active {
  transform: scale(0.97);
}

.icon {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.glass-card {
  border: 1px solid rgb(var(--color-neutral-800));
  border-radius: var(--round-lg);
  background-image: var(--gradient-glass);
}

/* Header */
.header {
  padding: 0 var(--layout-container-padding);
}

.header-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: var(--space-md);
  margin-bottom: var(--space-4xl);
  padding: var(--space-sm);
  border: 1px solid rgb(var(--color-neutral-800));
  border-radius: var(--round-sm);
}

.header-burger {
  z-index: 3;
  display: none;
  flex-shrink: 0;
  transition: all 0.2s ease;
}

.header-burger-icon {
  max-width: 2rem;
  max-height: 2rem;
}

.header-burger:hover {
  transform: translateY(-2px) scale(1.02);
  filter: brightness(1.1);
}

.header-burger:active {
  transform: scale(0.95);
}

/* Hero */
.hero {
  background-image:
    var(--glow-pink), var(--glow-blue),
    url("../assets/images/illustration-background-hero.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: auto, auto, contain;
}

.hero-title {
  font-family: var(--font-family-secondary);
  font-size: var(--font-size-4xl);
  line-height: var(--line-height-md);
  max-width: 58rem;
  margin: 0 auto var(--space-2xl);
  text-align: center;
}

.hero-subtitle {
  max-width: 50rem;
}

.hero-actions {
  display: flex;
  width: fit-content;
  margin: 0 auto var(--space-3xl);
  gap: var(--space-md);
}

.hero-banner {
  position: relative;
  max-width: 50rem;
  margin: 0 auto;
}

.hero-illustration {
  max-width: 31rem;
  margin: 0 auto;
}

/* Services */
.services-title {
  max-width: 27rem;
}

.services-subtitle {
  max-width: 42rem;
}

.services-grid {
  display: flex;
  gap: var(--space-lg);
}

.services-card {
  flex: 1;
  min-width: 0;
  padding: var(--space-xl);
  border: 1px solid transparent;
  border-radius: var(--round-lg);
  background-image:
    var(--glow-pink), var(--glow-blue), var(--gradient-bg-mask),
    var(--gradient-primary);
  background-clip: padding-box, border-box;
  background-origin: border-box;
}

.services-card-icon-box {
  flex-shrink: 0;
  width: 2.75rem;
  height: 2.75rem;
  margin-bottom: var(--space-xl);
  padding: var(--space-xs);
  border-radius: var(--round-sm);
  background-image: var(--gradient-primary);
}

/* Features */
.features-subtitle {
  max-width: 36rem;
}

.features-grid {
  display: flex;
  flex-direction: column;
  gap: var(--space-xl);
}

.features-card {
  display: flex;
  flex: 1;
  padding: var(--space-2xl);
  gap: var(--space-lg);
}

.features-card-icon-box {
  flex-shrink: 0;
  width: 2.5rem;
  height: 2.5rem;
}

.features-card-title {
  margin-bottom: var(--space-2xl);
}

.features-card-banner {
  display: flex;
  min-width: 40%;
  margin-left: var(--space-4xl);
}

.features-card-banner-report {
  align-content: center;
  flex-wrap: wrap;
  justify-content: center;
  gap: var(--space-md);
}

.features-card-banner-data {
  position: relative;
  align-items: center;
  justify-content: center;
}

.features-art-card-container {
  display: flex;
  flex-direction: column;
  gap: var(--space-md);
}

/* Pricing */
.pricing-grid {
  display: flex;
  align-items: center;
  gap: var(--space-lg);
}

.pricing-card {
  flex: 1;
  min-width: 0;
  padding: var(--space-2xl) var(--space-xl);
}

.pricing-card-price {
  font-family: var(--font-family-secondary);
  font-size: var(--font-size-5xl);
  display: flex;
  align-items: center;
  margin-bottom: var(--space-md);
  gap: var(--space-xs);
}

.pricing-card-currency {
  font-size: var(--font-size-3xl);
}

.pricing-card-cta {
  width: 100%;
  margin-bottom: var(--space-2xl);
}

.pricing-card-list {
  gap: var(--space-md);
}
/* ... */

